tests/uninitialized_instance_property/uninitialized_instance_property.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   6|   p: number; // PropertyNotDefinitivelyInitialized
        ^


Error ----------------------------------------------------------------------------------------------------- test.js:10:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   10|   p1: number; // PropertyNotDefinitivelyInitialized
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   11|   p2: number; // PropertyNotDefinitivelyInitialized
         ^^


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   15|   #priv; // PropertyNotDefinitivelyInitialized
         ^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:19:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   19|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:27:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   27|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:35:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   35|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:45:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   45|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:56:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   56|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:66:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   66|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:76:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   76|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:86:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   86|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:96:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   96|   p; // PropertyNotDefinitivelyInitialized
         ^


Error ---------------------------------------------------------------------------------------------------- test.js:110:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   110|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:120:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   120|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:131:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   131|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:141:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   141|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:151:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   151|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:153:5

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   153|     this.p += 3; // ReadFromUninitializedProperty
            ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:158:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   158|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:160:5

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   160|     this.p; // ReadFromUninitializedProperty
            ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:165:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   165|   p; // PropertyNotDefinitivelyInitialized
          ^


Error --------------------------------------------------------------------------------------------------- test.js:167:15

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   167|     const x = this.p; // ReadFromUninitializedProperty
                      ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:172:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   172|   p; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:174:9

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   174|     if (this.p === 0) false; // ReadFromUninitializedProperty
                ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:181:5

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   181|     this.p; // ReadFromUninitializedProperty
            ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:187:3

Class property not definitively initialized in the constructor. Can you add an assignment to the property declaration?
(`uninitialized-instance-property`)

   187|   p: number; // PropertyNotDefinitivelyInitialized
          ^


Error ---------------------------------------------------------------------------------------------------- test.js:189:5

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   189|     this.p++; // ReadFromUninitializedProperty
            ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:196:5

It is unsafe to read from a class property before it is definitively initialized. (`uninitialized-instance-property`)

   196|     this.p++; // ReadFromUninitializedProperty
            ^^^^^^


Error --------------------------------------------------------------------------------------------------- test.js:204:21

Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].

   test.js:204:21
   204|     let y: number = x; // ExpectError uninitialized variable is incompatible with number
                            ^

References:
   test.js:203:9
   203|     let x: number;
                ^ [1]
   test.js:204:12
   204|     let y: number = x; // ExpectError uninitialized variable is incompatible with number
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:212:14

Cannot assign `x` to `this.p` because uninitialized variable [1] is incompatible with number [2].

   test.js:212:14
   212|     this.p = x; // ExpectError uninitialized variable is incompatible with number
                     ^

References:
   test.js:211:9
   211|     let x: number;
                ^ [1]
   test.js:209:6
   209|   p: number;
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:219:14

It is unsafe to use `this` in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   219|     this.p = this; // ThisBeforeEverythingInitialized
                     ^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:226:9

It is unsafe to use `this` in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   226|     if (this) {} // ThisBeforeEverythingInitialized
                ^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:235:7

It is unsafe to use `this` in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   235|     f(this); // ThisBeforeEverythingInitialized
              ^^^^


Error --------------------------------------------------------------------------------------------------- test.js:243:15

It is unsafe to use `this` in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   243|     const x = this; // ThisBeforeEverythingInitialized
                      ^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:251:5

It is unsafe to call a method in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   251|     this.m(); // MethodCallBeforeEverythingInitialized
            ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:262:5

It is unsafe to call a method in the constructor before all class properties are definitively initialized.
(`uninitialized-instance-property`)

   262|     this.m(); // MethodCallBeforeEverythingInitialized
            ^^^^^^^^



Found 37 errors
